--- a/pace1.html
+++ b/pace1.html
@@ -217,7 +217,7 @@
 
         <!-- ปุ่มใหม่สำหรับคำนวณเปอร์เซ็นต์ของ Pace -->
         <div class="form-group">
-            <button onclick="calculatePacePercent()">PACE % (70-110%)</button>
+            <button onclick="calculatePacePercent()">%PACE</button>
         </div>
         <!-- โซนแสดงผลลัพธ์เปอร์เซ็นต์ของ Pace -->
         <div id="pacePercentResults"></div>
