--- a/pace1.html
+++ b/pace1.html
@@ -185,9 +185,10 @@
     </script>
 </head>
 <body>
-    <div id="menu-container"></div>
+    <div id="menu-container">
     <script src="menu.js"></script>
-
+    </div>
+        
     <div class="calculator">
         <h1>Enter 2 values, calculate the 3rd.</h1>
 
