--- a/pace1.html
+++ b/pace1.html
@@ -24,6 +24,7 @@
             max-width: 400px;
             width: 100%;
             text-align: center;
+            margin-top: 80px; /* เว้นที่สำหรับเมนู */
         }
 
         .calculator h1 {
@@ -92,6 +93,19 @@
             margin-bottom: 5px;
             border-radius: 4px;
         }
+        #menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+        
     </style>
 
     <script>
