--- a/pace1.html
+++ b/pace1.html
@@ -94,7 +94,7 @@
             border-radius: 4px;
         }
         #menu-container {
-    position: fixed;
+/*     position: fixed; */
     top: 0;
     left: 0;
     width: 100%;
