--- a/pace1.html
+++ b/pace1.html
@@ -24,7 +24,7 @@
             max-width: 400px;
             width: 100%;
             text-align: center;
-            margin-top: 80px; /* เว้นที่สำหรับเมนู */
+            margin-top: 70px; /* เว้นที่สำหรับเมนู */
         }
 
         .calculator h1 {
@@ -84,8 +84,11 @@
 
         /* สไตล์สำหรับแสดงผลลัพธ์ Pace% */
         #pacePercentResults {
-            margin-top: 20px;
-            text-align: left;
+    margin-top: 10px; /* เว้นระยะจากปุ่ม %PACE */
+    padding-top: 20px; /* เพิ่มระยะจากเมนูด้านบน */
+    text-align: left;
+    max-height: calc(100vh - 120px); /* จำกัดความสูงไม่ให้เกินพื้นที่ที่เหลือใต้เมนู */
+    overflow-y: auto; /* เพิ่ม scroll หากเนื้อหาเกิน */
         }
         .pace-item {
             background: #f9f9f9;
@@ -94,7 +97,7 @@
             border-radius: 4px;
         }
         #menu-container {
-/*     position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -104,6 +107,8 @@
     text-align: center;
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    height: 50px; /* กำหนดความสูงคงที่ */
+    line-height: 30px; /* จัดข้อความให้อยู่กลาง */
 }
         
     </style>
