--- a/pace1.html
+++ b/pace1.html
@@ -17,19 +17,14 @@
         }
 
         .calculator {
-/*             background: #fff;
+            background: #fff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             max-width: 400px;
             width: 100%;
-            text-align: center; */
-            max-width: 400px; /* จำกัดความกว้างบนเดสก์ท็อป */
-    margin: 0 auto;
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* เพิ่มเงา */
+            text-align: center;
+            
 
         }
 
@@ -40,7 +35,7 @@
         }
 
         .form-group {
-            margin-bottom: 15px;
+/*             margin-bottom: 15px; */
         }
 
         .input-container {
