--- a/pace1.html
+++ b/pace1.html
@@ -35,14 +35,14 @@
         }
 
         .form-group {
-/*             margin-bottom: 15px; */
+            margin-bottom: 15px;
         }
 
         .input-container {
-            display: flex;
+/*             display: flex;
             justify-content: center;
             gap: 10px;
-            margin-bottom: 10px;
+            margin-bottom: 10px; */
         }
 
         input {
