--- a/pace1.html
+++ b/pace1.html
@@ -11,7 +11,7 @@
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: center;
+/*             align-items: center; */
             height: 100vh;
             background-color: #f4f4f9;
         }
@@ -39,10 +39,10 @@
         }
 
         .input-container {
-/*             display: flex;
+            display: flex;
             justify-content: center;
             gap: 10px;
-            margin-bottom: 10px; */
+            margin-bottom: 10px;
         }
 
         input {
