--- a/pace1.html
+++ b/pace1.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
+            margin: 20px;
             padding: 0;
             display: flex;
             justify-content: center;
@@ -73,7 +73,7 @@
 
         #pacePercentResults {
             margin-top: 20px;
-            max-height: 300px;
+/*             max-height: 300px; */
             overflow-y: auto;
             border: 1px solid #ddd;
             padding: 10px;
