--- a/pace1.html
+++ b/pace1.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
 /*             align-items: center; */
-            height: 100vh;
+/*             height: 100vh; */
             background-color: #f4f4f9;
         }
 
