--- a/vcr1.html
+++ b/vcr1.html
@@ -87,7 +87,7 @@
         <h1>Running Pace Table for Training</h1>
         <table>
             <tr>
-                <td>Aerobic Regeneration Run (ARR)</td>
+                <td>Easy / Recovery run</td>
                 <td id="arr"></td>
             </tr>
             <tr>
@@ -95,19 +95,19 @@
                 <td id="lsd"></td>
             </tr>
             <tr>
-                <td>Slow Continuous Run (SCR)</td>
+                <td>Aerobic Base</td>
                 <td id="scr"></td>
             </tr>
             <tr>
-                <td>Medium Continuous Run (MCR)</td>
+                <td>Marathon Pace</td>
                 <td id="mcr"></td>
             </tr>
             <tr>
-                <td>Fast Continuous Run (FCR)</td>
+                <td>Tempo</td>
                 <td id="fcr"></td>
             </tr>
             <tr>
-                <td>Extensive Interval Run (EIR)</td>
+                <td>Interval</td>
                 <td id="eir"></td>
             </tr>
         </table>
