--- a/vcr1.html
+++ b/vcr1.html
@@ -91,23 +91,23 @@
                 <td id="arr"></td>
             </tr>
             <tr>
-                <td>Long Slow Distance (LSD)</td>
+                <td>Aerobic Base (AB) / Long Slow Distance (LSD)</td>
                 <td id="lsd"></td>
             </tr>
             <tr>
-                <td>Aerobic Base</td>
+                <td>Aerobic Threshold (AT)</td>
                 <td id="scr"></td>
             </tr>
             <tr>
-                <td>Marathon Pace</td>
+                <td>Low Tempo Run / Marathon Pace</td>
                 <td id="mcr"></td>
             </tr>
             <tr>
-                <td>Tempo</td>
+                <td>Tempo Run</td>
                 <td id="fcr"></td>
             </tr>
             <tr>
-                <td>Interval</td>
+                <td>Interval Run</td>
                 <td id="eir"></td>
             </tr>
         </table>
@@ -225,12 +225,12 @@
             document.getElementById('vcr').innerHTML = "<b>VCR: " + vcrSpeed.toFixed(1) + " m/s</b>";
             document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กม.";
 
-            document.getElementById('arr').innerHTML = ": " + pace1 + " นาที/กม. หรือช้ากว่า ระยะเวลา 30 นาที สำหรับฟื้นฟู หรือ มากกว่า 120 นาที สำหรับพัฒนาระบบแอโรบิค";
-            document.getElementById('lsd').innerHTML = ": " + pace2 + " - " + pace1 + " นาที/กม. ระยะเวลา 90-120 นาที สำหรับพัฒนาระบบแอโรบิค";
-            document.getElementById('scr').innerHTML = ": " + pace3 + " - " + pace2 + " นาที/กม. ระยะเวลา 60-90 นาที สำหรับพัฒนาระบบแอโรบิค";
-            document.getElementById('mcr').innerHTML = ": " + pace4 + " - " + pace3 + " นาที/กม. ระยะเวลา 45-60 นาที สำหรับพัฒนาความอดทน";
-            document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที สำหรับพัฒนาความอดทน";
-            document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 4 นาที) พัก 1-3 นาที 4-7 รอบ";
+            document.getElementById('arr').innerHTML = ": " + pace1 + " นาที/กม. หรือช้ากว่า ระยะเวลา 30 นาที หรือ มากกว่า สำหรับฟื้นฟู";
+            document.getElementById('lsd').innerHTML = ": " + pace2 + " - " + pace1 + " นาที/กม. ระยะเวลา 90-120 นาที ขยายฐานโซน 2";
+            document.getElementById('scr').innerHTML = ": " + pace3 + " - " + pace2 + " นาที/กม. ระยะเวลา 60-90 นาที ขยายเพดานโซน 2";
+            document.getElementById('mcr').innerHTML = ": " + pace4 + " - " + pace3 + " นาที/กม. ระยะเวลา 45-60 นาที";
+            document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที ฝึกความอดทนต่อกรดแลคติก";
+            document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 4 นาที) พัก 1-3 นาที 4-7 รอบ สำหรับพัฒนา VO2MAX";
 
 
             
