--- a/vcr1.html
+++ b/vcr1.html
@@ -228,7 +228,7 @@
             document.getElementById('arr').innerHTML = ": " + pace1 + " นาที/กม. หรือช้ากว่า ระยะเวลา 30 นาที หรือ มากกว่า สำหรับฟื้นฟู";
             document.getElementById('lsd').innerHTML = ": " + pace2 + " - " + pace1 + " นาที/กม. ระยะเวลา 90-120 นาที ขยายฐานโซน 2";
             document.getElementById('scr').innerHTML = ": " + pace3 + " - " + pace2 + " นาที/กม. ระยะเวลา 60-90 นาที ขยายเพดานโซน 2";
-            document.getElementById('mcr').innerHTML = ": " + pace4 + " - " + pace3 + " นาที/กม. ระยะเวลา 45-60 นาที";
+            document.getElementById('mcr').innerHTML = ": " + pace4 + " - " + pace3 + " นาที/กม. ระยะเวลา 45-60 นาที ควบคุมจังหวะหายใจ";
             document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที ฝึกความอดทนต่อกรดแลคติก";
             document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 4 นาที) พัก 1-3 นาที 4-7 รอบ สำหรับพัฒนา VO2MAX";
 
