--- a/race1.html
+++ b/race1.html
@@ -136,7 +136,7 @@
     </form>
   
     <div id="result"></div>
-    <div id="breakdown"></div>
+<!--     <div id="breakdown"></div> -->
   </div>
 
   <script>
