--- a/race1.html
+++ b/race1.html
@@ -147,7 +147,7 @@
   
     <!-- ผลลัพธ์สำหรับระยะทางตามที่กรอก -->
     <div id="result"></div>
-    <div id="breakdown"></div>
+<!--     <div id="breakdown"></div> -->
     
     <!-- ผลลัพธ์สำหรับระยะมาตรฐาน -->
     <div id="standardResults"></div>
